--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
     <title>Document</title>
   </head>
   <body>
-    <p onclick>Hello world! !!!</p>
+    <h1>Hello world!</h1>
+    <h2>Hello world_2!</h2>
     <script src="JS/script.js"></script>
   </body>
 </html>
